# brain-ops

./: .gitignore  AGENTS.md  CLAUDE.md  MASTER_KNOWLEDGE_GRAPH_BLUEPRINT.md  README.md  pyproject.toml
.claude/: settings.json
.githooks/: post-commit  post-rewrite
config/: vault.example.yaml  vault.yaml
docs/: MASTER_PLAN.md  PRODUCT_VISION.md  ROADMAP.md  SESSION_REPORT_2026-04-05.md  USAGE_GUIDE.md
prompts/: codex-task-prompt.md
scripts/: install_git_hooks.sh  project_post_commit.sh  project_sync.sh
src/: conflicto_grecia_persia.md
templates/: adr.md  architecture.md  changelog.md  debugging_note.md  decision.md  domain_glossary.md  invariants.md  knowledge.md  map.md  open_questions.md  permanent_note.md  priorities.md  project.md  reference_cli.md  runbook.md  sop.md  source.md  system.md  tech_debt.md
tests/: __init__.py  conftest.py  test_agent_enrich_plan.py  test_api_routes.py  test_application_automation.py  test_application_monitoring.py  test_application_workflows.py  test_backlinking.py  test_campaign05_migration_isolation.py  test_campaign05_real_vault_guard.py  test_campaign0_create_entity.py  test_campaign0_object_model.py  test_campaign1_disambiguate_bare.py  test_campaign1_fill_domain.py  test_campaign1_fix_capitalization.py  test_campaign1_normalize_domain.py  test_campaign1_reconcile_skip_flags.py  test_capture_routing.py  test_cli_command_registration.py  test_cli_conversation_adapters.py  test_cli_direct_enrich_plan.py  test_cli_event_sink_wiring.py  test_cli_knowledge_adapters.py  test_cli_monitoring_adapters.py  test_cli_runtime.py  (+62 more)
(+335 files in other folders)
